some small fix on mobile view :) sunday morning check

--- a/scss/components/footer.scss
+++ b/scss/components/footer.scss
@@ -26,6 +26,10 @@
     }
     
     &-secure {
+      margin-bottom: 20px; 
+      @media (min-width: $screen-sm-min) {
+        margin: 0;
+      }
       span {
         display: block;
       }
